--- a/src/app/sass/_general.scss
+++ b/src/app/sass/_general.scss
@@ -16,4 +16,40 @@
 			@include flex-align(center, middle);
 		}
 	}
+	.input-group {
+		flex-direction: column;
+		::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+			color: $secondary-blue;
+		}
+		::-moz-placeholder { /* Firefox 19+ */
+			color: $secondary-blue;
+		}
+		:-ms-input-placeholder { /* IE 10+ */
+			color: $secondary-blue;
+		}
+		:-moz-placeholder { /* Firefox 18- */
+			color: $secondary-blue;
+		}
+		label {
+			font-weight:bold;
+			font-size:1rem;
+		}
+		input[type="text"], textarea {
+			border: none;
+			box-shadow: 2px 2px 5px rgba(0,0,0,0.4);
+			background-color: $secondary-white;
+		}
+		input[type="text"] {
+			margin-bottom: 5px;
+		}
+		input[type="submit"] {
+			background-color: $primary-blue;
+			color: $primary-white;
+			font-weight: bold;
+			padding: 7px 15px;
+			max-width: 250px;
+			margin-left: auto;
+			cursor: pointer;
+		}
+	}
 }
