--- a/src/components/main-content/_main-content-area.scss
+++ b/src/components/main-content/_main-content-area.scss
@@ -2,13 +2,11 @@
 	width:100%;
 	height:auto;
 	display:block;
-	padding:15px;
-	padding-bottom:60px;
+	padding:15px 15px 115px;
 	@include breakpoint(medium) {
 		width:70%;
 		margin-left:30%;
-		padding:20px;
-		padding-bottom:60px;
+		padding:20px 20px 140px;
 	}
 	@media (min-width:900px) {
 		width:calc(100% - 270px);
