--- a/src/components/main-content/single-post/post-comments/single-comment/comment-controls/_comment-controls.scss
+++ b/src/components/main-content/single-post/post-comments/single-comment/comment-controls/_comment-controls.scss
@@ -11,6 +11,12 @@
 	.vote-control {
 		.voting-triggers {
 			flex-direction:row;
+			.vote-up-trigger, .vote-down-trigger {
+				color:$primary-blue;
+				&:hover, &:active, &:focus {
+					color:$secondary-blue;
+				}
+			}
 			.vote-up-trigger {
 				margin-right: 5px;
     			top: -1px;
@@ -24,6 +30,22 @@
     			@media (min-width:500px) {
     				margin-left: 12px;
     			}
+			}
+		}
+	}
+	.edit-control {
+		.edit-item-trigger {
+			color:$primary-blue;
+			&:hover, &:active, &:focus {
+				color:$secondary-blue;
+			}
+		}
+	}
+	.delete-control {
+		.delete-item-trigger {
+			color:$primary-blue;
+			&:hover, &:active, &:focus {
+				color:$secondary-blue;
 			}
 		}
 	}
