--- a/src/components/nav/_navigation.scss
+++ b/src/components/nav/_navigation.scss
@@ -4,6 +4,7 @@
 	color:$secondary-white;
 	width:100%;
 	padding:10px;
+	z-index: 99;
 	.app-title {
 		color:$secondary-white;
 		text-align:center;
@@ -139,13 +140,10 @@
 			position:relative;
 			top:2px;
 		}
-		@include breakpoint(medium) {
-			// display:block;
-		}
 	}
 	.new-post {
 		position: fixed;
-		z-index: 99;
+		z-index: 9999;
 		right:12px;
 		bottom:56px;
 		.new-post-link {
@@ -176,6 +174,7 @@
 				@include css-transition(.25s, all, ease);
 				transition-property: opacity, transform;
 				border-radius:2px;
+				color:$primary-white;
 				&:after {
 					content:'';
 					width: 0;
@@ -211,7 +210,7 @@
 					font-size:2rem;
 				}
 			}
-			&:hover, &:active, &:focus {
+			&:hover {
 				background-color:$secondary-blue;
 				svg {
 					color:$primary-white;
